updated with video

--- a/styles/core.css
+++ b/styles/core.css
@@ -351,4 +351,7 @@ div.section.bold {
 .image-banner > .image-banner-caption.top {
   top: 2%; }
 
+.circle_emphasis {
+  background-color: red; }
+
 /*# sourceMappingURL=core.css.map */
