--- a/styles/core.scss
+++ b/styles/core.scss
@@ -263,3 +263,7 @@ div.section.bold {
 .image-banner > .image-banner-caption.top {
     top: 2%;
 }
+
+.circle_emphasis {
+    background-color: red;
+}
